@@ -77,7 +77,6 @@ struct options_t
 	unsigned fmt;        /* flags to specify output format to use */
 	unsigned mode;       /* flags to specify program mode */
 	unsigned openssl_mask;    /* bit-mask for enabled OpenSSL hash functions */
-	const char* config_file;  /* config file path */
 	char* printf_str;         /* printf-like format */
 	opt_tchar* template_file; /* printf-like template file path */
 	opt_tchar* output;        /* file to output calculation or checking results to */
